--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,9 @@
     "migration:show": "typeorm-ts-node-commonjs migration:show -d ormconfig.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.913.0",
+    "@aws-sdk/client-ses": "^3.913.0",
+    "@aws-sdk/s3-request-presigner": "^3.913.0",
     "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -39,6 +42,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
